Project base: aggiunte librerie e creati file .cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,15 @@ project(Project_Work_TPSIT)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(Project_Work_TPSIT main.cpp)
+set(SOURCE_DIR src)
+set(INCLUDE_DIR include)
+
+include_directories(${INCLUDE_DIR})
+
+add_library(Serra STATIC ${SOURCE_DIR}/Serra.cpp)
+add_library(Impianto STATIC ${SOURCE_DIR}/Impianto.cpp)
+add_library(Time STATIC ${SOURCE_DIR}/Time.cpp)
+
+add_executable(Project_Work_TPSIT ${SOURCE_DIR}/main.cpp)
+
+target_link_libraries(Project_Work_TPSIT Serra Impianto Time)
