Modified the class "Automatico" and implemented the base version of the class "Manuale"

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,10 @@ include_directories(${INCLUDE_DIR})
 add_library(Serra STATIC ${SOURCE_DIR}/Serra.cpp)
 add_library(Impianto STATIC ${SOURCE_DIR}/Impianto.cpp)
 add_library(Time STATIC ${SOURCE_DIR}/Time.cpp)
+add_library(Manuale STATIC ${SOURCE_DIR}/Manuale.cpp)
+add_library(Automatico STATIC ${SOURCE_DIR}/Automatico.cpp)
+add_library(Adattivo STATIC ${SOURCE_DIR}/Adattivo.cpp)
+
 
 add_executable(Project_Work_TPSIT ${SOURCE_DIR}/main.cpp)
 
